# mankeli-chat

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json
.sqlx/: query-00fd1a2ef59cd8839e167a40837474be2dfa2050cd93e70de6e0d09e4c3a6b30.json  query-112d28cd9320c6ceae4b82b86f459cc8876daf2dc7a3917476ce7c431d4153c1.json  query-2543c4f0302752ad48a2bcd4050fa0d458f31ee034bdc76867b0dd6a3ce52c22.json  query-3d78441c380fdd816445e877fae12f39c9a4a6af38d954c1307d8defa5765040.json  query-40c64ec79ae88309d6490a471bf738a82fc790b2a5dbc7a3ccba10fce9df07ca.json  query-6257430c80c1c4fd3e07f765ad8649715d5fa876379c893e9da4435078964143.json  query-6d722ebf5f6c42c6f8c2aa6c2b57bb97dd85a9a9d1dd1408dcb601926c38114b.json  query-7411261a7463d96da40760ffcfa69638ee382ef289e8b6af8a263c262f6a0ddd.json  query-7a7d68b5587c58092625de204aae5c9da720a83347907fc7bc86e2f00cbd9806.json  query-7dc2e774239518264d126a3a1e848a500a12baf7bbaf5dfe9d55bfbcc67cf7c2.json  query-8488df430618353b1d88fce65e88561fa32d3f47f7dd3de4838bc09e625cf404.json  query-8791bd13b80734fc785244f1ba1c8439563ab93b297195f942785de3fc28e2e3.json  query-91d831a1ff6e35aaa6ac1ecba1403078d6b3db1a79996f31a1e266853eefa126.json  query-939d4a1f390b90782747238540f8f36edd3764195f384cd77eee6e59107b8a58.json  query-99edf77de654574053c5104f67c6bc6b947021d4790b6feb9dfd5c52555124d0.json  query-9fec68911913f2882f4adc980f05c355039e510b9d3ff1086f4b69438a19fbce.json  query-b2e28a63b2f860c0a289292b2bc366323020ec02040cc84cb382c8252a94ddc9.json  query-b2e88220a76bc8a11398d12da4e82087738872ff22d882517906e18aff7ce179.json  (+5 more)
migrations/: 20250715150258_tables.sql
(+9 files in other folders)
