[package]
name = "mankeli-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
futures = "0.3.31"
httpmock = "0.7.0"
hyper = "1.6.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
tower = "0.5.2"
tracing = "0.1.41"
